# zahran-2-chain

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  TEST_RESULTS_100_PERCENT.txt  TEST_RESULTS_FINAL.md  TEST_RESULTS_RUST.md  check-all-features-detailed.sh  docker-compose.yml  setup-docker.sh  setup-grafana-dashboard.sh  setup.sh  test-all-features.sh  test-block-time.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
docker/: Dockerfile  Dockerfile.l3  start.sh
docker/grafana/dashboards/: dashboard.yml  nusa-dashboard.json
docker/nginx/: nginx.conf
docker/postgres/: init.sql
docs/: API.  WHITEPAPER.md  governance.md  token-standards.md
explorer-backend/: indexer.go  package.json
explorer-frontend/: index.html
kms/: wallet.go
l1-core/: go.mod
l2-vm/: Cargo.toml
l2-vm/src/: bridge.rs  dex.rs  lending.rs  lib.rs  multi_vm.  nft_marketplace.rs  parallel_execution.rs  privacy.rs  private_contracts.rs  rollups.rs  rs  stablecoin.rs  zkvm.rs
l3-ai/: requirements.txt
l3-ai/src/: auditor.py  block_explorer.py  trading_bot.py
monitoring/: economics.py  enterprise_security.go  metrics.go  security.go
src/: main.rs  main.rs.backup
src/consensus/: mod.rs  producer.rs
src/core/: benchmark.rs  block.rs  contract.rs  executor.rs  governance.rs  mempool.rs  mod.rs  state.rs  token.rs  transaction.rs  upgrade.rs
src/crypto/: aes.rs  mod.rs
src/rpc/: server.rs  server.rs.broken  server.rs.working
src/vm/: mod.rs  wasm.rs
wallet-app/: wallet.dart
(+25 files in other folders)
