[package]
name = "nusa-chain"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = "0.4"
rayon = "1.8"

[[bin]]
name = "nusa-node"
path = "src/main.rs"
